Fixed delete instrument modal scrolling Fixed info modal scaling on mobile

--- a/styles-darkmode.css
+++ b/styles-darkmode.css
@@ -1036,5 +1036,8 @@ input[type="range"]:focus::-ms-fill-upper {
     width: 70%;
     height: 30%;
   }
+  .info-modal {
+    width: 80%;
+  }
 }
 
