--- a/styles.css
+++ b/styles.css
@@ -1014,4 +1014,8 @@ input[type="range"]:focus::-ms-fill-upper {
     width: 70%;
     height: 30%;
   }
+
+  .info-modal {
+    width: 80%;
+  }
 }
